# Vectra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  architecture.md  languages.toml  vcpkg.json
.github/workflows/: ci.yml  release.yml
adapters/: cargo.toml  cmake.toml  go.toml  gradle.toml  maven.toml  npm.toml  pytest.toml
benchmarks/proof-of-concept/: README.md  REPORT-EDIT.md  REPORT.md  format-report.js  run-edit-poc.sh  run-poc.sh  tasks-edit.json  tasks-typeflow-edit.json  tasks-typeflow.json  tasks.json
benchmarks/proof-of-concept/runs-edit/edit-add-comment-getpodqos/: claude.diff  claude.ndjson  claude.txt  meta.json  question.txt  vectra.ndjson  vectra.stderr  vectra.txt
benchmarks/proof-of-concept/runs-edit/edit-add-helper-pdb-eviction/: claude.ndjson  claude.txt  meta.json  question.txt  vectra.diff  vectra.ndjson  vectra.stderr  vectra.txt
benchmarks/proof-of-concept/runs-edit/edit-add-log-rankmemory/: claude.ndjson  claude.txt  (+6 more)
cmake/: TreeSitterGrammar.cmake
cmake/sqlite3-shim/: SQLite3Config.cmake
extension/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.host.json  tsconfig.json  tsconfig.webview.json  vitest.config.ts
extension/vscode/media/: chat.css  walkthrough-binary.md  walkthrough-chat.md  walkthrough-claude.md  walkthrough-doctor.md  walkthrough-index.md
extension/vscode/scripts/: check-version.js  mcp-permission-server.js  sync-license.js
extension/vscode/src/: allowList.test.ts  allowList.ts  autoIndexer.ts  chatProvider.ts  chatStorage.ts  extension.ts  indexLock.ts  pathPolicy.test.ts  pathPolicy.ts  permissionBridge.ts
include/vectra/agent/: llm_backend.hpp
include/vectra/core/: chunk.hpp  chunker.hpp  hash.hpp  language.hpp
include/vectra/embed/: embedder.hpp  model_registry.hpp  reranker.hpp
include/vectra/exec/: apply.hpp  diff.hpp  patch_loop.hpp  test_runner.hpp
include/vectra/retrieve/: retriever.hpp
include/vectra/store/: store.hpp
queries/bash/: chunks.scm  imports.scm  symbols.scm
queries/c/: chunks.scm  imports.scm  symbols.scm
queries/clojure/: chunks.scm  imports.scm  symbols.scm
queries/cpp/: chunks.scm  imports.scm  symbols.scm
queries/csharp/: chunks.scm  imports.scm  symbols.scm
queries/css/: chunks.scm  imports.scm  symbols.scm
queries/dart/: chunks.scm  imports.scm  symbols.scm
queries/dockerfile/: chunks.scm  imports.scm  symbols.scm
queries/elixir/: chunks.scm  imports.scm  symbols.scm
queries/go/: chunks.scm  imports.scm  symbols.scm
queries/haskell/: chunks.scm  imports.scm  symbols.scm
queries/hcl/: chunks.scm  imports.scm  symbols.scm
queries/html/: chunks.scm  imports.scm  symbols.scm
queries/java/: chunks.scm  imports.scm  symbols.scm
queries/javascript/: chunks.scm  imports.scm  symbols.scm
queries/json/: chunks.scm  imports.scm  symbols.scm
queries/kotlin/: chunks.scm  imports.scm  symbols.scm
queries/lua/: chunks.scm  imports.scm  symbols.scm
queries/make/: chunks.scm  imports.scm  symbols.scm
queries/markdown/: chunks.scm  imports.scm  symbols.scm
queries/ocaml/: chunks.scm  imports.scm  symbols.scm
queries/php/: chunks.scm  imports.scm  symbols.scm
queries/python/: chunks.scm  imports.scm  symbols.scm
queries/r/: chunks.scm  imports.scm  symbols.scm
queries/ruby/: chunks.scm  imports.scm  symbols.scm
queries/rust/: chunks.scm  imports.scm  symbols.scm
queries/scala/: chunks.scm  imports.scm  symbols.scm
queries/sql/: chunks.scm  imports.scm  symbols.scm
queries/toml/: chunks.scm  imports.scm  symbols.scm
queries/typescript/: chunks.scm  imports.scm  symbols.scm
queries/yaml/: chunks.scm  imports.scm  symbols.scm
queries/zig/: chunks.scm  imports.scm  symbols.scm
src/agent/: CMakeLists.txt  anthropic_backend.cpp  anthropic_backend.hpp  llm_backend.cpp  sse_parser.cpp  sse_parser.hpp
src/cli/: CMakeLists.txt  approval.cpp  approval.hpp  ask_command.cpp  ask_command.hpp  claude_subprocess.cpp  claude_subprocess.hpp  cli_paths.cpp  cli_paths.hpp  diff_render.cpp  diff_render.hpp  fix_command.cpp  fix_command.hpp  index_command.cpp  index_command.hpp  main.cpp  model_command.cpp  model_command.hpp  project_config.cpp  project_config.hpp  repl_command.cpp  repl_command.hpp  search_command.cpp  search_command.hpp  serve_command.cpp  serve_command.hpp  walker.cpp  walker.hpp
src/core/: CMakeLists.txt  chunk.cpp  chunker.cpp  grammars.cpp  grammars.hpp  hash.cpp  language.cpp  parser_pool.cpp  parser_pool.hpp
src/embed/: CMakeLists.txt  embedder.cpp  model_downloader.cpp  model_downloader.hpp  model_registry.cpp  reranker.cpp  sha256.hpp
src/exec/: CMakeLists.txt  apply.cpp  diff.cpp  patch_loop.cpp  test_runner.cpp
src/retrieve/: CMakeLists.txt  retriever.cpp
src/store/: CMakeLists.txt  schema.cpp  schema.hpp  sqlite_helpers.cpp  sqlite_helpers.hpp  store.cpp  vector_index.cpp  vector_index.hpp
tests/: CMakeLists.txt
tests/agent/: CMakeLists.txt  config_test.cpp  sse_parser_test.cpp
tests/cli/: CMakeLists.txt  approval_test.cpp  claude_subprocess_test.cpp  cli_paths_test.cpp  diff_render_test.cpp  project_config_test.cpp  repl_command_test.cpp  walker_test.cpp
tests/core/: CMakeLists.txt  chunker_test.cpp  hash_test.cpp  language_test.cpp  parse_validation_test.cpp
tests/embed/: CMakeLists.txt  embedder_test.cpp  model_registry_test.cpp  reranker_test.cpp
tests/exec/: CMakeLists.txt  apply_test.cpp  diff_test.cpp  patch_loop_test.cpp  test_runner_test.cpp
tests/fixtures/languages/: Sample.cs  Sample.java  sample.c  sample.clj  sample.cpp  sample.css  sample.dart  sample.dockerfile  sample.ex  sample.go  sample.hs  sample.html  sample.js  sample.json  sample.kt  sample.lua  sample.md  sample.mk  sample.ml  sample.php  sample.py  sample.r  sample.rb  sample.rs  sample.scala  sample.sh  sample.sql  sample.tf  sample.toml  sample.ts  sample.tsx  sample.yaml  sample.zig
tests/retrieve/: CMakeLists.txt  retriever_test.cpp
tests/store/: CMakeLists.txt  store_test.cpp  vector_index_test.cpp
(+256 files in other folders)
